services/event-hub-backend-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-hub-backend-service
  namespace: prod
  labels:
    app: event-hub-backend-service
    tier: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-hub-backend-service
      tier: api
  template:
    metadata:
      labels:
        app: event-hub-backend-service
        tier: api
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: event-hub-app
      containers:
        - name: event-hub-backend-service
          image: REPLACE_WITH_BACKEND_SERVICE_IMAGE
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: event-hub-backend-service
  namespace: prod
  labels:
    app: event-hub-backend-service
    tier: api
spec:
  selector:
    app: event-hub-backend-service
    tier: api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
